:bug: Fixing scrollbar

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -668,15 +668,6 @@ It imports a scss file that acts as template for a page (tile_page.scss), compon
 	}
 }
 
-// Making scrollbar on top
-#___gatsby {
-	> div > div:nth-child(2) {
-		z-index: 1000;
-	}
-	> div > div:nth-child(3) {
-		z-index: 1000;
-	}
-}
 
 // Components
 
